--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
     background-color: rgb(255, 255, 255,.4);
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    box-shadow: 1ps 1ps 5px black;
+    box-shadow: 0px 1px 10px black;
     grid-column: 4;
     height: 100px;
     text-align: right;
@@ -72,7 +72,7 @@ body{
 }
 span{
     display: grid;
-    box-shadow: 1ps 1ps 5px black;
+    box-shadow: 1px 1px 5px black;
     width: 60px;
     height: 60px;
     color: #fff;
